# Paster-plus-plus

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  cmake_install.cmake  mingw-toolchain.cmake
.github/workflows/: codeql-analysis.yml
src/: CMakeLists.txt  paster-plus-plus.cpp  paster-plus-plus.h  paster-plus-plus.rc
